--- a/Message Extension/Storyboards/Base.lproj/MessageExtension.storyboard
+++ b/Message Extension/Storyboards/Base.lproj/MessageExtension.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="je6-JZ-ceA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jMo-bB-Dlw">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="IPm-rI-mOO">
+            <objects>
+                <navigationController id="jMo-bB-Dlw" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YRN-LV-Ptk">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fp2-mY-3G9">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="je6-JZ-ceA" kind="relationship" relationship="rootViewController" id="SkH-Ju-aD8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9DZ-Vi-p7Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-36" y="108"/>
+        </scene>
         <!--Photo Sticker Browser View Controller-->
         <scene sceneID="OhS-TE-fuZ">
             <objects>
@@ -137,6 +156,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Wid-BX-1hF"/>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="m21-ci-ERi">
+                        <barButtonItem key="leftBarButtonItem" systemItem="edit" id="Edz-x6-g4r"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6qi-pe-ifc">
+                            <connections>
+                                <segue destination="zWP-2x-fud" kind="showDetail" identifier="AddStickerSegue" id="fGW-Xv-xRu"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="collectionView" destination="pWq-rX-ruZ" id="uCl-4D-INS"/>
                     </connections>
@@ -386,6 +415,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="OFF-LG-fBC"/>
+        <segue reference="v44-oX-9hc"/>
     </inferredMetricsTieBreakers>
 </document>
