--- a/Message Extension/Storyboards/Base.lproj/MessageExtension.storyboard
+++ b/Message Extension/Storyboards/Base.lproj/MessageExtension.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HcW-W7-QaD">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,14 +15,11 @@
             <objects>
                 <viewController storyboardIdentifier="MessagesAppViewController" id="HcW-W7-QaD" customClass="MessagesAppViewController" customModule="MessageExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AjF-ci-m4d">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EFw-SD-Zrz">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <connections>
-                                    <segue destination="jMo-bB-Dlw" kind="embed" identifier="EmbedStickerBrowserSegue" id="Eog-op-iGA"/>
-                                </connections>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -35,36 +36,16 @@
             </objects>
             <point key="canvasLocation" x="-849" y="107"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="IPm-rI-mOO">
-            <objects>
-                <navigationController id="jMo-bB-Dlw" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="YRN-LV-Ptk">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="fp2-mY-3G9">
-                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </toolbar>
-                    <connections>
-                        <segue destination="je6-JZ-ceA" kind="relationship" relationship="rootViewController" id="SkH-Ju-aD8"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9DZ-Vi-p7Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-36" y="108"/>
-        </scene>
         <!--Sticker Browser View Controller-->
         <scene sceneID="OhS-TE-fuZ">
             <objects>
                 <viewController storyboardIdentifier="StickerBrowserViewController" id="je6-JZ-ceA" customClass="StickerBrowserViewController" customModule="MessageExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="rkq-Vv-FBG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pWq-rX-ruZ" userLabel="StickerBrowserCollectionView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="I9I-p4-h0H">
                                     <size key="itemSize" width="90" height="90"/>
@@ -115,11 +96,10 @@
                                             <outlet property="imageView" destination="wXO-lG-VFa" id="3jv-hA-Gj5"/>
                                             <outlet property="placeholderView" destination="OdC-Rn-AuH" id="7O5-BA-KD7"/>
                                             <outlet property="stickerView" destination="jdh-Ws-RIn" id="v4i-hC-vdd"/>
-                                            <segue destination="zWP-2x-fud" kind="showDetail" identifier="EditStickerSegue" id="OFF-LG-fBC"/>
                                         </connections>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AddMoreCell" id="Iyb-XD-XMs" customClass="AddStickerCell" customModule="MessageExtension" customModuleProvider="target">
-                                        <rect key="frame" x="142.5" y="10" width="90" height="90"/>
+                                        <rect key="frame" x="111.5" y="10" width="90" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
@@ -139,7 +119,6 @@
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="zcV-wh-1zh" id="VKP-Jl-t26"/>
-                                            <segue destination="zWP-2x-fud" kind="showDetail" identifier="AddStickerSegue" id="v44-oX-9hc"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -176,52 +155,26 @@
             </objects>
             <point key="canvasLocation" x="760.79999999999995" y="108.39580209895054"/>
         </scene>
-        <!--Edit Sticker Navigation Controller-->
-        <scene sceneID="9Tx-ja-z0g">
-            <objects>
-                <navigationController storyboardIdentifier="EditStickerNavigationController" toolbarHidden="NO" id="zWP-2x-fud" userLabel="Edit Sticker Navigation Controller" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="khG-a4-1QC" userLabel="Edit Sticker Navigation Bar">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="EditStickerNavigationBar"/>
-                        </userDefinedRuntimeAttributes>
-                    </navigationBar>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="8uO-Rb-pwY" userLabel="Edit Sticker Toolbar">
-                        <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <userDefinedRuntimeAttributes>
-                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="EditStickerToolbar"/>
-                        </userDefinedRuntimeAttributes>
-                    </toolbar>
-                    <connections>
-                        <segue destination="Sfm-qp-wnb" kind="relationship" relationship="rootViewController" id="Mdh-qO-J2C"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kWl-2D-yy8" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1535" y="107"/>
-        </scene>
         <!--Edit Sticker Controller-->
         <scene sceneID="pgP-1M-rFp">
             <objects>
                 <viewController storyboardIdentifier="EditStickerViewController" automaticallyAdjustsScrollViewInsets="NO" id="Sfm-qp-wnb" userLabel="Edit Sticker Controller" customClass="EditStickerViewController" customModule="MessageExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Krq-IY-bxv">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YAe-Yb-u73" userLabel="Sticker Layout Guide">
-                                <rect key="frame" x="0.0" y="64" width="375" height="375"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="414"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m8f-4R-EU9" userLabel="Sticker Placeholder" customClass="AppIconView" customModule="MessageExtension" customModuleProvider="target">
-                                        <rect key="frame" x="28" y="28" width="319" height="319"/>
+                                        <rect key="frame" x="31" y="31" width="352" height="352"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <accessibility key="accessibilityConfiguration" identifier="StickerPlaceholderView">
                                             <bool key="isElement" value="YES"/>
                                         </accessibility>
                                     </view>
                                     <scrollView multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" minimumZoomScale="0.10000000149011612" maximumZoomScale="1.1000000238418579" keyboardDismissMode="onDrag" translatesAutoresizingMaskIntoConstraints="NO" id="hWi-h1-ulc">
-                                        <rect key="frame" x="28" y="28" width="319" height="319"/>
+                                        <rect key="frame" x="31" y="31" width="352" height="352"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="375" translatesAutoresizingMaskIntoConstraints="NO" id="Hji-BZ-5A3">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
@@ -249,7 +202,7 @@
                                         </connections>
                                     </scrollView>
                                     <view userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CYS-GX-QhQ" userLabel="Cover View">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <accessibility key="accessibilityConfiguration" identifier="StickerCoverView">
                                             <accessibilityTraits key="traits" notEnabled="YES"/>
@@ -274,10 +227,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zyU-St-nvE" userLabel="Control Layout Guide">
-                                <rect key="frame" x="0.0" y="439" width="375" height="184"/>
+                                <rect key="frame" x="0.0" y="502" width="414" height="311"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="024-sf-e1M" userLabel="Button Layout Guide">
-                                        <rect key="frame" x="40" y="75" width="295" height="34"/>
+                                        <rect key="frame" x="59.5" y="138.5" width="295" height="34"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oR6-mH-Zfi">
                                                 <rect key="frame" x="0.0" y="0.0" width="47" height="34"/>
@@ -372,7 +325,7 @@
                             </userDefinedRuntimeAttributes>
                         </barButtonItem>
                         <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Photo Sticker" textAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" id="T2Q-TF-mOs" userLabel="Sticker Title Text Field">
-                            <rect key="frame" x="78" y="7" width="238" height="30"/>
+                            <rect key="frame" x="88" y="7" width="238" height="30"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <accessibility key="accessibilityConfiguration" identifier="StickerTitleTextField"/>
                             <nil key="textColor"/>
@@ -385,6 +338,7 @@
                             </userDefinedRuntimeAttributes>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="cancelButtonItem" destination="6RG-w8-g3K" id="5gT-Wi-PXk"/>
@@ -415,7 +369,4 @@
             <point key="canvasLocation" x="2306" y="108"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="OFF-LG-fBC"/>
-    </inferredMetricsTieBreakers>
 </document>
