--- a/MessagesExtension/Scenes/Messages App/Messages.storyboard
+++ b/MessagesExtension/Scenes/Messages App/Messages.storyboard
@@ -4,16 +4,15 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Messages App View Controller-->
+        <!--Messages View Controller-->
         <scene sceneID="zvB-ov-t5y">
             <objects>
-                <viewController storyboardIdentifier="MessagesAppViewController" id="HcW-W7-QaD" customClass="MessagesAppViewController" customModule="MessageExtension" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MessagesViewController" id="HcW-W7-QaD" customClass="MessagesViewController" customModule="MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="AjF-ci-m4d">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
