--- a/MessagesExtension/Scenes/Edit Sticker/EditStickerViewController.storyboard
+++ b/MessagesExtension/Scenes/Edit Sticker/EditStickerViewController.storyboard
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eAM-Qd-D3J">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,7 +12,7 @@
         <!--Edit Sticker Controller-->
         <scene sceneID="uh9-aX-eS8">
             <objects>
-                <viewController storyboardIdentifier="EditStickerViewController" automaticallyAdjustsScrollViewInsets="NO" id="eAM-Qd-D3J" userLabel="Edit Sticker Controller" customClass="EditStickerViewController" customModule="MessageExtension" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EditStickerViewController" automaticallyAdjustsScrollViewInsets="NO" id="eAM-Qd-D3J" userLabel="Edit Sticker Controller" customClass="EditStickerViewController" customModule="MessagesExtension" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nAF-2H-hXy">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -21,7 +20,7 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRz-ix-xWI" userLabel="Sticker Layout Guide">
                                 <rect key="frame" x="0.0" y="44" width="414" height="414"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dyv-se-BRx" userLabel="Sticker Placeholder" customClass="AppIconView" customModule="MessageExtension" customModuleProvider="target">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dyv-se-BRx" userLabel="Sticker Placeholder" customClass="AppIconView" customModule="MessagesExtension" customModuleProvider="target">
                                         <rect key="frame" x="31" y="31" width="352" height="352"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <accessibility key="accessibilityConfiguration" identifier="StickerPlaceholderView">
@@ -213,7 +212,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fEb-ht-8Om" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <customObject id="cEQ-g3-bfk" customClass="StyleKit" customModule="MessageExtension" customModuleProvider="target">
+                <customObject id="cEQ-g3-bfk" customClass="StyleKit" customModule="MessagesExtension" customModuleProvider="target">
                     <connections>
                         <outletCollection property="photoToolbarIconTargets" destination="jZj-az-O0R" collectionClass="NSMutableArray" id="ng7-6D-VuO"/>
                         <outletCollection property="trashToolbarIconTargets" destination="FCY-Cz-cME" collectionClass="NSMutableArray" id="Rdl-hO-ByK"/>
